Fixed side menu

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">About</a></li>
-						<li><a href="#two">Things I Can Do</a></li>
-						<li><a href="#three">A Few Accomplishments</a></li>
-						<li><a href="#four">Contact</a></li>
+						<li><a href="#one" class="active">About Me</a></li>
+						<li><a href="#two">Skills</a></li>
+						<li><a href="#three">Research Experience</a></li>
+						<!-- <li><a href="#four">Contact</a></li> -->
 					</ul>
 				</nav>
 				<footer>
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.jpg" alt="" />
+									<img src="images/banner.png" alt="" />
 								</div>
 								<div class="container">
 									<header class="major">
@@ -64,7 +64,7 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Skills and Experience</h3>
+									<h3>Skills</h3>
 									<p>These are some of the skills and experiences I have gained while working in Academia. I am always keenly working on amassing more knowledge! </p>
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Programming (Python, C/C++)</li>
