--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Sohini Dutta</a></h1>
-					<p>Hi! This is Sohini. I am an aspiring Cosmologist. <br />
-						I hope to contribute toward understanding our origins one day.</p>
+					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of Technology-Indore (IIT-I). </p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -49,7 +48,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner.png" alt="" />
+									<img src="images/banner.png" alt=""/>
 								</div>
 								<div class="container">
 									<header class="major">
@@ -84,7 +83,7 @@
 									<p>Some of the projects I have worked on! </p>
 									<div class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="#" class="image"> <img src="images/pic01.png" alt="" /></a>
 											<div class="inner">
 												<h4>Cosmology and Epoch of Reionization</h4>
 												<p> <b>Project Title:</b> Interpretation of multiwavelength observation of the Epoch of Reionization from next generation telescopes <br />
@@ -94,7 +93,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="https://www.atnf.csiro.au/outreach/education/everyone/pulsars/index.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
 											<div class="inner">
 												<h4>Millisecond Pulsars</h4>
 												<p> <b>Project Title:</b> Searching for nulling in Millisecond Pulsars<br />
