--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 								</div>
 								<div class="container">
 									<header class="major">
-										<h2>About Me</h2>
+										<h2>Sohini Dutta</h2>
+										<h3> About Me </h3>
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
@@ -68,7 +69,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Programming (Python, C/C++)</li>
 										<li class="icon solid fa-robot">Artificial Neural Network (ANN) </li>
-										<li class="icon solid fa-chart-line">Statistics (particularly Bayesian Inference)</li>
+										<li class="icon solid fa-chart-line">Statistics (particularly Bayesian Inference using MCMC)</li>
 										<li class="icon solid fa-desktop">Linux</li>
 										<li class="icon solid fa-file">LaTeX and Microsoft Office</li>
 										<li class="icon solid fa-atom">Simulations (N-body, FoF halo-finder algorithms,semi-numerical CII and HI map generation)</li>
