--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
-					<h1 id="logo"><a href="#">Sohini Dutta</a></h1>
+					<!-- <h1 id="logo"><a href="#">Sohini Dutta</a></h1> -->
 					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of Technology-Indore (IIT-I). </p>
 				</header>
 				<nav id="nav">
