--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
 							<section id="three">
 								<div class="container">
 									<h3>Research Experience</h3>
-									<p>Some of the projects I have worked on! </p>
+									<p>Some of the projects I have worked on under the guidence of some wonderful supervisors. These were all worked on since 2021.  </p>
 									<div class="features">
 										<article>
 											<a href="#" class="image"> <img src="images/pic01.png" alt="" /></a>
 											<div class="inner">
 												<h4>Cosmology and Epoch of Reionization</h4>
 												<p> <b>Project Title:</b> Interpretation of multiwavelength observation of the Epoch of Reionization from next generation telescopes <br />
-												<b>Project Supervisor:</b> <a href="http://people.iiti.ac.in/~sumanm/"> Dr. Suman Majumdar </a> <br />
+												<b>Project Supervisor:</b> <a href="http://people.iiti.ac.in/~sumanm/"> Dr. Suman Majumdar, Assistant Professor, Indian Institute of Technology (IIT-I), Indore, Madhya Pradesh, India </a> <br />
 												<b>Project Duration:</b> August 2021-Present <br />
 												 We explored the potential of future multi-wavelength observations in modelling the Epoch of Reionization (EoR) using the redshifted 21cm signal from the EoR and the Line Intensity Mapping (LIM) observations of the redshifted 158 µm emission from CII atoms. We have attempted to constrain the minimum dark matter halo mass for halos that host the early photon sources from the CII power spectrum using an Artificial Neural Networking (ANN) based signal emulator and a Markov Chain Monte Carlo (MCMC) framework. We have performed these operations on the CII power-spectrum at this time and are working on extending the same treatment to the CIIx21cm cross-power spectrum. </p>
 											</div>
@@ -98,7 +98,7 @@
 											<div class="inner">
 												<h4>Millisecond Pulsars</h4>
 												<p> <b>Project Title:</b> Searching for nulling in Millisecond Pulsars<br />
-												<b>Project Supervisor:</b> <a href="http://www.ncra.tifr.res.in/~bhaswati/index.html"> Dr. Bhaswati Bhattacharyya </a> <br />
+												<b>Project Supervisor:</b> <a href="http://www.ncra.tifr.res.in/~bhaswati/index.html"> Dr. Bhaswati Bhattacharyya, Reader, National Centre for Radio Astrophysics (NCRA), Pune, Maharashtra, India </a> <br />
 												<b>Project Duration:</b> May 2021-August 2021 <br />
 											Nulling is a fairly common phenomenon in regular pulsars. Essentially, the predictable, periodic pulses of a pulsar suddenly dips below detectable sensitivity of the telescope for a finite period of time. In millisecond pulsars, however, this phenomenon is extremely rare. My project was focused on searching for instances of this curious occurance in millisecond pulsars using radiofrequency observations
 											obtained by the Giant Metrewave Radio Telescope (GMRT) situated near Pune, Maharashtra, India.</p>
