Added CV button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<!-- <h1 id="logo"><a href="#">Sohini Dutta</a></h1> -->
 					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of Technology-Indore (IIT-I). </p>
+					<form method="get" action="assets/CV.pdf">
+						<button type="submit">Download CV</button>
+					</form>
 				</header>
 				<nav id="nav">
 					<ul>
