--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<!-- <h1 id="logo"><a href="#">Sohini Dutta</a></h1> -->
-					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of Technology-Indore (IIT-I). </p>
+					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of 
+						Technology-Indore (IIT-I).
+						<br /> 
+							<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
+						<br />
+							<a href="assets/CV.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
+					</p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -58,10 +64,6 @@
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
 									<p>I recently completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. Currently, I am engaged in a year-long research project leading to a thesis at the end of my degree. My present research interests lie in the field of Cosmology, particularly in the areas of Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. 
-									<br /> 
-										<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
-									<br />
-										<a href="assets/CV.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
 									</p>
 								</div>
 							</section>
