--- a/index.html
+++ b/index.html
@@ -36,11 +36,12 @@
 				</nav>
 				<footer>
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
+						<li><a href="https://www.linkedin.com/in/sohinidutta1297/" class="icon brands fa-linked-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://github.com/sohinixcvii" class="icon brands fa-github"><span class="label">Github</span></a></li>
+						<li><a href="https://thiswonderfulcosmos.wordpress.com/blog/" class="icon solid fa-blog"><span class="label">Blog</span></a></li>
 					</ul>
 				</footer>
 			</section>
@@ -97,7 +98,7 @@
 												<p> <b>Project Title:</b> Interpretation of multiwavelength observation of the Epoch of Reionization from next generation telescopes <br />
 												<b>Project Supervisor:</b> <a href="http://people.iiti.ac.in/~sumanm/"> Dr. Suman Majumdar, Assistant Professor, Indian Institute of Technology (IIT-I), Indore, Madhya Pradesh, India </a> <br />
 												<b>Project Duration:</b> August 2021-Present <br />
-												 We explored the potential of future multi-wavelength observations in modelling the Epoch of Reionization (EoR) using the redshifted 21cm signal from the EoR and the Line Intensity Mapping (LIM) observations of the redshifted 158 µm emission from CII atoms. We have attempted to constrain the minimum dark matter halo mass for halos that host the early photon sources from the CII power spectrum using an Artificial Neural Networking (ANN) based signal emulator and a Markov Chain Monte Carlo (MCMC) framework. We have performed these operations on the CII power-spectrum at this time and are working on extending the same treatment to the CIIx21cm cross-power spectrum. </p>
+												<b>Project Description:</b> We explored the potential of future multi-wavelength observations in modelling the Epoch of Reionization (EoR) using the redshifted 21cm signal from the EoR and the Line Intensity Mapping (LIM) observations of the redshifted 158 µm emission from CII atoms. We have attempted to constrain the minimum dark matter halo mass for halos that host the early photon sources from the CII power spectrum using an Artificial Neural Networking (ANN) based signal emulator and a Markov Chain Monte Carlo (MCMC) framework. We have performed these operations on the CII power-spectrum at this time and are working on extending the same treatment to the CIIx21cm cross-power spectrum. </p>
 											</div>
 										</article>
 										<article>
@@ -107,43 +108,28 @@
 												<p> <b>Project Title:</b> Searching for nulling in Millisecond Pulsars<br />
 												<b>Project Supervisor:</b> <a href="http://www.ncra.tifr.res.in/~bhaswati/index.html"> Dr. Bhaswati Bhattacharyya, Reader, National Centre for Radio Astrophysics (NCRA), Pune, Maharashtra, India </a> <br />
 												<b>Project Duration:</b> May 2021-August 2021 <br />
-											Nulling is a fairly common phenomenon in regular pulsars. Essentially, the predictable, periodic pulses of a pulsar suddenly dips below detectable sensitivity of the telescope for a finite period of time. In millisecond pulsars, however, this phenomenon is extremely rare. My project was focused on searching for instances of this curious occurance in millisecond pulsars using radiofrequency observations
-											obtained by the Giant Metrewave Radio Telescope (GMRT) situated near Pune, Maharashtra, India.</p>
+												<b>Project Description:</b> Nulling is a fairly common phenomenon in regular pulsars. Essentially, the predictable, periodic pulses of a pulsar suddenly dips below detectable sensitivity of the telescope for a finite period of time. In millisecond pulsars, however, this phenomenon is extremely rare. My project was focused on searching for instances of this curious occurance in millisecond pulsars using radiofrequency observations
+												obtained by the Giant Metrewave Radio Telescope (GMRT) situated near Pune, Maharashtra, India.</p>
 											</div>
 										</article>
-										<!-- <article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Snapped dark matter in the wild</h4>
-												<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
-											</div>
-										</article> -->
 									</div>
 								</div>
 							</section>
 
-						<!-- Four
+						<!-- Four-->
 							<section id="four">
 								<div class="container">
-									<h3>Contact Me</h3>
-									<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
-									<form method="post" action="#">
-										<div class="row gtr-uniform">
-											<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
-											<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
-											<div class="col-12"><input type="text" name="subject" id="subject" placeholder="Subject" /></div>
-											<div class="col-12"><textarea name="message" id="message" placeholder="Message" rows="6"></textarea></div>
-											<div class="col-12">
-												<ul class="actions">
-													<li><input type="submit" class="primary" value="Send Message" /></li>
-													<li><input type="reset" value="Reset Form" /></li>
-												</ul>
-											</div>
-										</div>
-									</form>
+									<h3>Research Interests</h3>
+									<p> <ul> 
+										ul.a{list-style-type: circle;}
+									<li> Cosmology and Early Universe: Epoch of Reionization, Cosmic Dawn, Inflation </li>
+									<li> Machine Learning and its applications to Astrophysics </li>
+									<li> Semi-numerical cosmological simulations </li>
+									<li> Astrostatistics </li>
+									<li> Data Science and its applications to Astrophysics and Cosmology </li>
+									</p>
 								</div>
 							</section>
-						-->
 						<!-- Five -->
 						<!--
 							<section id="five">
