--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
-						<li><a href="https://www.linkedin.com/in/sohinidutta1297/" class="icon brands fa-linked-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.linkedin.com/in/sohinidutta1297/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/sohinixcvii" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://thiswonderfulcosmos.wordpress.com/blog/" class="icon solid fa-blog"><span class="label">Blog</span></a></li>
 					</ul>
@@ -121,8 +121,7 @@
 							<section id="four">
 								<div class="container">
 									<h3>Research Interests</h3>
-									<p> <ul> 
-										ul.a{list-style-type: circle;}
+									<p> <ul>
 									<li> Cosmology and Early Universe: Epoch of Reionization, Cosmic Dawn, Inflation </li>
 									<li> Machine Learning and its applications to Astrophysics </li>
 									<li> Semi-numerical cosmological simulations </li>
