--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 									<ul class="feature-icons">
 										<li class="icon solid fa-code">Programming (Python, C/C++)</li>
 										<li class="icon solid fa-robot">Artificial Neural Network (ANN) </li>
-										<li class="icon solid fa-chart-line">Statistics (particularly Bayesian Inference using MCMC)</li>
+										<li class="icon solid fa-chart-line">Statistics (particularly Bayesian <br /> Inference using MCMC)</li>
 										<li class="icon solid fa-desktop">Linux</li>
 										<li class="icon solid fa-file">LaTeX and Microsoft Office</li>
 										<li class="icon solid fa-atom">Simulations (N-body, FoF halo-finder algorithms,semi-numerical CII and HI map generation)</li>
