--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Skills</a></li>
 						<li><a href="#three">Research Experience</a></li>
-						<!-- <li><a href="#four">Contact</a></li> -->
+						<li><a href="#four">Research Interests</a></li>
 					</ul>
 				</nav>
 				<footer>
