Updated work experience

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
 						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Research Experience</a></li>
+						<li><a href="#three">Work and Research Experience</a></li>
 						<li><a href="#four">Research Interests</a></li>
 					</ul>
 				</nav>
@@ -89,8 +89,20 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Research Experience</h3>
-									<p>Some of the projects I have worked on under the guidence of some wonderful supervisors. These were all worked on since 2021.  </p>
+									<h3>Work and Research Experience</h3>
+									<h4> Work Experience: </h4>
+									<div class="features">
+										<article>
+											<a href="#" class="image"> <img src="images/amex.png" alt="" /></a>
+											<div class="inner">
+												<h4>American Express</h4>
+												<p> <b>Job Title:</b> Analyst-Data Science, Global Decision Science-Credit & Fraud Risk <br />
+												<b>Job Duration:</b> October 2022-Present <br />
+												<b>Job Description:</b> Part of a team that uses cutting edge machine learning and artificial intelligence techniques to inform marketing and credit risk decisions within American Express at a global scale. </p>
+											</div>
+										</article>
+									</div>
+									<h4> Research Experience: </h4>
 									<div class="features">
 										<article>
 											<a href="#" class="image"> <img src="images/pic01.png" alt="" /></a>
