--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 									<h4> Work Experience: </h4>
 									<div class="features">
 										<article>
-											<a href="#" class="image"> <img src="images/amex.png" alt="" /></a>
+											<a href="#" class="image"> <img src="images/amex.PNG" alt="" /></a>
 											<div class="inner">
 												<h4>American Express</h4>
 												<p> <b>Job Title:</b> Analyst-Data Science, Global Decision Science-Credit & Fraud Risk <br />
