--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<!-- <p>Just an incredibly simple responsive site<br />
 										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
-									<p>I recently completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. Currently, I am engaged in a year-long research project leading to a thesis at the end of my degree. My present research interests lie in the field of Cosmology, particularly in the areas of Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. 
+									<p>I recently completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. Currently, I work at American Express as a Data Science Analyst and I am also engaged in a research project. My present research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. 
 									</p>
 								</div>
 							</section>
