--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 						<br /> 
 							<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
 						<br />
-							<a href="assets/CV.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
+							<a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
 					</p>
 				</header>
 				<nav id="nav">
