--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									<p> <ul>
 									<li> Cosmology and Early Universe: Epoch of Reionization, Cosmic Dawn, Inflation </li>
 									<li> Machine Learning and its applications to Astrophysics </li>
-									<li> Semi-numerical cosmological simulations </li>
+									<li> Cosmological simulations </li>
 									<li> Astrostatistics </li>
 									<li> Data Science and its applications to Astrophysics and Cosmology </li>
 									</p>
