--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
 							<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
 						<br />
 							<a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
+						<br />
+							<a href="assets/Thesis_SohiniDutta_compressed.pdf" download="Thesis_SohiniDutta.pdf">Download my Master's Thesis</a>
 					</p>
 				</header>
 				<nav id="nav">
