Added publication links

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 								<li> <a href="https://www.youtube.com/watch?v=TrWL-E5poXU"> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at Workshop on 21-cm Cosmology in the SKA Era, (Oct 31 2022-Nov 04 2022), Indian Statistical Institute, Baranagar, West Bengal, India </a> </li>
 								<li> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at 2022 URSI Regional Conference on Radio Science, (Dec 1 2022-Dec 4 2022), Indian Institute of Technology, Indore, Madhya Pradesh, India </li>
 								<li> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at 32nd meeting of Indian Association for General Relativity and Gravitation (IAGRG32), (Dec 19 2022-Dec 21 2022), IISER Kolkata, West Bengal, India </li>
+								<li> "Constraining Reionization Parameters from 21-cm Observational Data" at  Big Data Cosmology School, May 1, 2023-May 8,2023, International Centre for Theoretical Sciences (ICTS), Bangalore, Karnataka, India
 								</p>
 							</div>
 						</section>
@@ -164,9 +165,9 @@
 							<div class="container">
 								<h3>Publications: </h3>
 								<p> <ul>
-								<li> Sohini Dutta, Suman Majumdar, Himanshu TIwari, Chandra Shekhar Murmu, “Interpreting multi-wavelength observations of the Epoch of Reionization from next generation telescopes”, URSI-RCRS, 2022 </li>
-								<li> Saswata Dasgupta, Satadru Bag, Suman Majumdar, Sohini Dutta, “Analysis of realistic HI 21-cm maps from Epoch of Reionization using Largest Cluster Statistics (LCS)”, URSI-RCRS, 2022 </li>
-								<li> Saswata Dasgupta, Samit Kumar Pal, Satadru Bag, Sohini Dutta, Suman Majumdar, Abhirup Datta, Aadarsh Pathak, Mohd Kamran, Rajesh Mondal, Prakash Sarkar, <a href="https://arxiv.org/abs/2302.02727v1"> “Interpreting the HI 21-cm cosmology maps through Largest Cluster Statistics -- I: Impact of the synthetic SKA1-Low observations” </a> , (Submitted for review to JCAP) </li>	
+								<li> Sohini Dutta, Suman Majumdar, Himanshu TIwari, Chandra Shekhar Murmu, <a href="https://www.ursi.org/proceedings/2022/RCRS2022/papers/SPCExtendedAbstractDuttaSohini.pdf"> "Interpreting multi-wavelength observations of the Epoch of Reionization from next generation telescopes” </a>, URSI-RCRS, 2022 </li>
+								<li> Saswata Dasgupta, Satadru Bag, Suman Majumdar, Sohini Dutta, <a href="https://ieeexplore.ieee.org/document/10118469"> “Analysis of realistic HI 21-cm maps from Epoch of Reionization using Largest Cluster Statistics (LCS)” <\a>, URSI-RCRS, 2022 </li>
+								<li> Saswata Dasgupta, Samit Kumar Pal, Satadru Bag, Sohini Dutta, Suman Majumdar, Abhirup Datta, Aadarsh Pathak, Mohd Kamran, Rajesh Mondal, Prakash Sarkar, <a href="https://arxiv.org/abs/2302.02727v1"> “Interpreting the HI 21-cm cosmology maps through Largest Cluster Statistics -- I: Impact of the synthetic SKA1-Low observations” </a> </li>	
 								</p>
 							</div>
 						</section>
