--- a/index.html
+++ b/index.html
@@ -19,31 +19,25 @@
 				<header>
 					<span class="image avatar"><img src="images/avatar.jpg" alt="" /></span>
 					<!-- <h1 id="logo"><a href="#">Sohini Dutta</a></h1> -->
-					<p>Hi! This is Sohini. I am an aspiring Cosmologist and an Astronomy graduate from Indian Institute of
+					<p>Hi! This is Sohini. I am an Astronomy graduate from Indian Institute of
 						Technology-Indore (IIT-I).
 						<br />
 							<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
 						<br />
 							<a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
-						<br />
-							<a href="assets/Thesis_SohiniDutta_compressed.pdf" download="Thesis_SohiniDutta.pdf">Download my Master's Thesis</a>
 					</p>
 				</header>
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">About Me</a></li>
-						<li><a href="#two">Skills</a></li>
-						<li><a href="#three">Work and Research Experience</a></li>
-						<li><a href="#four">Research Interests</a></li>
-						<li><a href="#five">Conferences and Workshops</a></li>
-						<li><a href="#six">Publications</a></li>
+						<li><a href="#two">Research Interests</a></li>
+						<li><a href="#three">Publications</a></li>
+						<li><a href="#four">Conferences and Workshops</a></li>
+						<li><a href="#five">Professional Journey</a></li>
 					</ul>
 				</nav>
 				<footer>
 					<ul class="icons">
-						<!-- <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li> -->
 						<li><a href="https://www.linkedin.com/in/sohinidutta1297/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/sohinixcvii" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://thiswonderfulcosmos.wordpress.com/blog/" class="icon solid fa-blog"><span class="label">Blog</span></a></li>
@@ -66,75 +60,14 @@
 									<header class="major">
 										<h2>Sohini Dutta</h2>
 										<h3> About Me </h3>
-										<!-- <p>Just an incredibly simple responsive site<br />
-										template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p> -->
 									</header>
-									<p>I recently completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. Currently, I work at American Express as a Data Science Analyst and I am also engaged in a research project. My present research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc.
+									<p>I completed my Master's degree in Astronomy from the Department of Astronomy, Astrophysics and Space Engineering, Indian Institute of Technology, Indore. My present research interests lie in the field of Cosmology and the very early universe, particularly in the areas of Inflation, Galaxy Evolution, Cosmic Dawn, the Epoch of Reionization etc. I worked as a Data Scientist at American Express and now, I am looking forward to joining the Jodrell Bank Centre of Astrophysics at the University of Manchester as a PhD student. If you would like to chat with me, find my email in the navigation bar!
 									</p>
 								</div>
 							</section>
 
-						<!-- Two -->
+						<!-- Two-->
 							<section id="two">
-								<div class="container">
-									<h3>Skills</h3>
-									<p>These are some of the skills and experiences I have gained while working in Academia. I am always keenly working on amassing more knowledge! </p>
-									<ul class="feature-icons">
-										<li class="icon solid fa-code">Programming (Python, C/C++, SQL, PySpark)</li>
-										<li class="icon solid fa-robot">Machine Learning and AI (Artificial Neural Network (ANN), Decision Trees, Gradient Boosting Machines (GBM)) </li>
-										<li class="icon solid fa-chart-line">Statistics (particularly Bayesian <br /> Inference using MCMC)</li>
-										<li class="icon solid fa-desktop">Linux</li>
-										<li class="icon solid fa-file">LaTeX and Microsoft Office</li>
-										<li class="icon solid fa-atom">Simulations (N-body, FoF halo-finder algorithms,semi-numerical CII and HI map generation)</li>
-									</ul>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
-									<h3>Work and Research Experience</h3>
-									<h4> Work Experience: </h4>
-									<div class="features">
-										<article>
-											<a href="#" class="image"> <img src="images/amex.PNG" alt="" /></a>
-											<div class="inner">
-												<h4>American Express</h4>
-												<p> <b>Job Title:</b> Analyst-Data Science, Global Decision Science-Credit & Fraud Risk <br />
-												<b>Job Duration:</b> October 2022-Present <br />
-												<b>Job Description:</b> Part of a team that uses cutting edge machine learning and artificial intelligence techniques to inform marketing and credit risk decisions within American Express at a global scale. </p>
-											</div>
-										</article>
-									</div>
-									<h4> Research Experience: </h4>
-									<div class="features">
-										<article>
-											<a href="#" class="image"> <img src="images/pic01.png" alt="" /></a>
-											<div class="inner">
-												<h4>Cosmology and Epoch of Reionization</h4>
-												<p> <b>Project Title:</b> Interpretation of multiwavelength observation of the Epoch of Reionization from next generation telescopes <br />
-												<b>Project Supervisor:</b> <a href="http://people.iiti.ac.in/~sumanm/"> Dr. Suman Majumdar, Assistant Professor, Indian Institute of Technology (IIT-I), Indore, Madhya Pradesh, India </a> <br />
-												<b>Project Duration:</b> August 2021-Present <br />
-												<b>Project Description:</b> We explored the potential of future multi-wavelength observations in modelling the Epoch of Reionization (EoR) using the redshifted 21cm signal from the EoR and the Line Intensity Mapping (LIM) observations of the redshifted 158 µm emission from CII atoms. We have attempted to constrain the minimum dark matter halo mass for halos that host the early photon sources from the CII power spectrum using an Artificial Neural Networking (ANN) based signal emulator and a Markov Chain Monte Carlo (MCMC) framework. We have performed these operations on the CII power-spectrum at this time and are working on extending the same treatment to the CIIx21cm cross-power spectrum. </p>
-											</div>
-										</article>
-										<article>
-											<a href="https://www.atnf.csiro.au/outreach/education/everyone/pulsars/index.html" class="image"><img src="images/pic02.jpg" alt="" /></a>
-											<div class="inner">
-												<h4>Millisecond Pulsars</h4>
-												<p> <b>Project Title:</b> Searching for nulling in Millisecond Pulsars<br />
-												<b>Project Supervisor:</b> <a href="http://www.ncra.tifr.res.in/~bhaswati/index.html"> Dr. Bhaswati Bhattacharyya, Reader, National Centre for Radio Astrophysics (NCRA), Pune, Maharashtra, India </a> <br />
-												<b>Project Duration:</b> May 2021-August 2021 <br />
-												<b>Project Description:</b> Nulling is a fairly common phenomenon in regular pulsars. Essentially, the predictable, periodic pulses of a pulsar suddenly dips below detectable sensitivity of the telescope for a finite period of time. In millisecond pulsars, however, this phenomenon is extremely rare. My project was focused on searching for instances of this curious occurance in millisecond pulsars using radiofrequency observations
-												obtained by the Giant Metrewave Radio Telescope (GMRT) situated near Pune, Maharashtra, India.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four-->
-							<section id="four">
 								<div class="container">
 									<h3>Research Interests</h3>
 									<p> <ul>
@@ -146,8 +79,19 @@
 									</p>
 								</div>
 							</section>
-						<!-- Five -->
-						<section id="Five">
+						<!-- Three -->
+						<section id="three">
+							<div class="container">
+								<h3>Publications: </h3>
+								<p> <ul>
+								<li> Sohini Dutta, Suman Majumdar, Himanshu TIwari, Chandra Shekhar Murmu, <a href="https://www.ursi.org/proceedings/2022/RCRS2022/papers/SPCExtendedAbstractDuttaSohini.pdf"> "Interpreting multi-wavelength observations of the Epoch of Reionization from next generation telescopes” </a>, URSI-RCRS, 2022 </li>
+								<li> Saswata Dasgupta, Satadru Bag, Suman Majumdar, Sohini Dutta, <a href="https://ieeexplore.ieee.org/document/10118469"> “Analysis of realistic HI 21-cm maps from Epoch of Reionization using Largest Cluster Statistics (LCS)” </a>, URSI-RCRS, 2022 </li>
+								<li> Saswata Dasgupta, Samit Kumar Pal, Satadru Bag, Sohini Dutta, Suman Majumdar, Abhirup Datta, Aadarsh Pathak, Mohd Kamran, Rajesh Mondal, Prakash Sarkar, <a href="https://arxiv.org/abs/2302.02727v1"> “Interpreting the HI 21-cm cosmology maps through Largest Cluster Statistics -- I: Impact of the synthetic SKA1-Low observations” </a> </li>	
+								</p>
+							</div>
+						</section>
+						<!-- Four -->
+						<section id="four">
 							<div class="container">
 								<h3>Conferences and Workshops: </h3>
 								<p> <ul>
@@ -156,18 +100,21 @@
 								<li> <a href="https://www.youtube.com/watch?v=TrWL-E5poXU"> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at Workshop on 21-cm Cosmology in the SKA Era, (Oct 31 2022-Nov 04 2022), Indian Statistical Institute, Baranagar, West Bengal, India </a> </li>
 								<li> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at 2022 URSI Regional Conference on Radio Science, (Dec 1 2022-Dec 4 2022), Indian Institute of Technology, Indore, Madhya Pradesh, India </li>
 								<li> Talk on “Interpretation of multiwavelength observations of the epoch of reionization from next-generation telescopes” at 32nd meeting of Indian Association for General Relativity and Gravitation (IAGRG32), (Dec 19 2022-Dec 21 2022), IISER Kolkata, West Bengal, India </li>
-								<li> "Constraining Reionization Parameters from 21-cm Observational Data" at  Big Data Cosmology School, May 1, 2023-May 8,2023, International Centre for Theoretical Sciences (ICTS), Bangalore, Karnataka, India
+								<li> <a href=""> "Constraining Reionization Parameters from 21-cm Observational Data" at  Big Data Cosmology School, May 1, 2023-May 8,2023, International Centre for Theoretical Sciences (ICTS), Bangalore, Karnataka, India </a> </li>
 								</p>
 							</div>
 						</section>
-						<!-- Six -->
-						<section id="Six">
+
+						<!-- Five -->
+						<section id="five">
 							<div class="container">
-								<h3>Publications: </h3>
+								<h3>Academic Journey: </h3>
 								<p> <ul>
-								<li> Sohini Dutta, Suman Majumdar, Himanshu TIwari, Chandra Shekhar Murmu, <a href="https://www.ursi.org/proceedings/2022/RCRS2022/papers/SPCExtendedAbstractDuttaSohini.pdf"> "Interpreting multi-wavelength observations of the Epoch of Reionization from next generation telescopes” </a>, URSI-RCRS, 2022 </li>
-								<li> Saswata Dasgupta, Satadru Bag, Suman Majumdar, Sohini Dutta, <a href="https://ieeexplore.ieee.org/document/10118469"> “Analysis of realistic HI 21-cm maps from Epoch of Reionization using Largest Cluster Statistics (LCS)” <\a>, URSI-RCRS, 2022 </li>
-								<li> Saswata Dasgupta, Samit Kumar Pal, Satadru Bag, Sohini Dutta, Suman Majumdar, Abhirup Datta, Aadarsh Pathak, Mohd Kamran, Rajesh Mondal, Prakash Sarkar, <a href="https://arxiv.org/abs/2302.02727v1"> “Interpreting the HI 21-cm cosmology maps through Largest Cluster Statistics -- I: Impact of the synthetic SKA1-Low observations” </a> </li>	
+								<li> <b>October 2023: </b> Incoming PhD student, Jodrell Bank Center for Astrophysics, University of Manchester, Manchester, UK </li>
+									<ul><li>(Also selected by University of Cambride, University of Heidelberg, and Swinburne University for PhD)</li></ul>
+								<li><b>October 2022-June 2023: </b> Analyst-Data Science, American Express</li>
+								<li><b>August 2020-August 2022: </b> Master's Student (M.Sc. Astronomy), Department of Astronomy, Astrophysics, and Space Engineering, Indian Institute of Technology, Indore, Madhya Pradesh, India </li>
+								<li><b>August 2016-May 2019: </b> Undergraduate Student (B.Sc. Physics), Maitreyi College, University of Delhi, Delhi, India </li>
 								</p>
 							</div>
 						</section>
@@ -178,7 +125,7 @@
 					<section id="footer">
 						<div class="container">
 							<ul class="copyright">
-								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Sohini Dutta. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
