--- a/index.html
+++ b/index.html
@@ -108,10 +108,10 @@
 						<!-- Five -->
 						<section id="five">
 							<div class="container">
-								<h3>Academic Journey: </h3>
+								<h3>Professional Journey: </h3>
 								<p> <ul>
 								<li> <b>October 2023: </b> Incoming PhD student, Jodrell Bank Center for Astrophysics, University of Manchester, Manchester, UK </li>
-									<ul><li>(Also selected by University of Cambride, University of Heidelberg, and Swinburne University for PhD)</li></ul>
+									<ul><li>(Also selected by University of Cambridge, University of Heidelberg, and Swinburne University for PhD)</li></ul>
 								<li><b>October 2022-June 2023: </b> Analyst-Data Science, American Express</li>
 								<li><b>August 2020-August 2022: </b> Master's Student (M.Sc. Astronomy), Department of Astronomy, Astrophysics, and Space Engineering, Indian Institute of Technology, Indore, Madhya Pradesh, India </li>
 								<li><b>August 2016-May 2019: </b> Undergraduate Student (B.Sc. Physics), Maitreyi College, University of Delhi, Delhi, India </li>
