--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 					<p>Hi! This is Sohini. I am an Astronomy graduate from Indian Institute of
 						Technology-Indore (IIT-I).
 						<br />
-							<a href="mailto: sohinidutta97@gmail.com"> Send me an email. </a>
+							<a href="mailto: sohinixcvii@gmail.com"> Send me an email. </a>
 						<br />
 							<a href="assets/CV_Dutta.pdf" download="CV_SohiniDutta.pdf">Download my CV</a>
 					</p>
